refactored tests with FactoryGirl, added feature tests for menu creation

--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,5 +1,14 @@
 <h1> welcome to derpy menus</h1>
+<%= flash[:error] %>
+
 <%= form_for @menu do |f| %>
 <%= f.text_field :name %>
 <%= f.submit "Add Menu" %>
 <% end %>
+
+<ul>
+<% @menus.each do |menu| %>
+<li><%= menu.name %></li>
+<% end %>
+</ul>
+
