--- a/app/views/menus/_addmenuform.html.erb
+++ b/app/views/menus/_addmenuform.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @menu do |f| %>
+<%= form_for @menu, :html => {:class => :hidden} do |f| %>
 <%= f.text_field :name %>
-<%= f.submit "Add Menu" %>
+<%= f.submit "Add Menu", :class => :button %>
 <% end %>
