--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -5,4 +5,4 @@
 
 <%= render 'allmenus', menus: @menus %>
 
-
+<img src="http://static.adzerk.net/Advertisers/bd294ce7ff4c43b6aad4aa4169fb819b.jpg">
